fix(theme): text overflow in single line items

--- a/src/theme/overrides.scss
+++ b/src/theme/overrides.scss
@@ -5,10 +5,16 @@
 }
 
 .toolbar-ios ion-title {
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 45px;
+  padding-right: 45px;
 }
 
 .header-ios .toolbar-ios:last-child .toolbar-background-ios {
   border-bottom-width: 0;
+}
+
+.item-block h2,
+.item-block h3 {
+  overflow: inherit;
+  text-overflow: inherit;
 }
